tests/paczka1/small_fuzzy/24148976.err
Error in line 1: UDFZJA70Y A124 91,09
Error in line 4: siUk A124 20,6
